[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 53.0
margin_top = 260.0
margin_right = 116.0
margin_bottom = 274.0
rect_scale = Vector2( 3.23872, 2.21041 )
text = "Lista:"

[node name="Button" type="Button" parent="."]
margin_left = 125.0
margin_top = 532.0
margin_right = 325.0
margin_bottom = 582.0
text = "Click here"

[node name="num1" type="LineEdit" parent="."]
margin_left = 36.0
margin_top = 214.0
margin_right = 105.0
margin_bottom = 242.0

[node name="num2" type="LineEdit" parent="."]
margin_left = 114.0
margin_top = 215.0
margin_right = 193.0
margin_bottom = 241.0

[node name="num3" type="LineEdit" parent="."]
margin_left = 203.0
margin_top = 215.0
margin_right = 278.0
margin_bottom = 239.0

[node name="num4" type="LineEdit" parent="."]
margin_left = 285.0
margin_top = 214.0
margin_right = 365.0
margin_bottom = 240.0

[node name="num5" type="LineEdit" parent="."]
margin_left = 374.0
margin_top = 214.0
margin_right = 466.0
margin_bottom = 242.0

[node name="num6" type="LineEdit" parent="."]
margin_left = 477.0
margin_top = 215.0
margin_right = 552.0
margin_bottom = 243.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 45.0
margin_top = 298.0
margin_right = 593.0
margin_bottom = 519.0

[node name="resposta" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 20.0
margin_top = 18.0
margin_right = 249.0
margin_bottom = 70.0
rect_scale = Vector2( 2.18754, 3.48426 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 275.0
margin_top = 59.0
margin_right = 640.0
margin_bottom = 148.0

[node name="exemplo" type="RichTextLabel" parent="ColorRect2"]
modulate = Color( 0.0352941, 0, 0, 1 )
self_modulate = Color( 0.0313726, 0, 0, 1 )
margin_left = 14.0
margin_top = 11.0
margin_right = 344.0
margin_bottom = 82.0

[node name="Label2" type="Label" parent="."]
modulate = Color( 0.0156863, 0, 0, 1 )
self_modulate = Color( 0.0196078, 0, 0, 1 )
margin_left = 23.0
margin_top = 77.0
margin_right = 172.0
margin_bottom = 101.0
rect_scale = Vector2( 2.53104, 3.82996 )
text = "Lista exemplo:"

[node name="Button2" type="Button" parent="."]
margin_left = 663.0
margin_top = 64.0
margin_right = 903.0
margin_bottom = 150.0
text = "CLICK HERE"

[node name="Button3" type="Button" parent="."]
margin_left = 928.0
margin_top = 245.0
margin_right = 1002.0
margin_bottom = 284.0
text = "click here"

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 779.0
margin_top = 243.0
margin_right = 913.0
margin_bottom = 283.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect3"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 17.0
margin_top = 4.0
margin_right = 118.0
margin_bottom = 34.0

[node name="Label3" type="Label" parent="."]
modulate = Color( 0.027451, 0, 0, 1 )
self_modulate = Color( 0.0235294, 0, 0, 1 )
margin_left = 679.0
margin_top = 238.0
margin_right = 721.0
margin_bottom = 252.0
rect_scale = Vector2( 2.23211, 3.39949 )
text = "Texto:"

[node name="Button4" type="Button" parent="."]
margin_left = 869.0
margin_top = 466.0
margin_right = 972.0
margin_bottom = 501.0
text = "CLICK HERE"

[node name="LineEdit222" type="LineEdit" parent="."]
margin_left = 683.0
margin_top = 385.0
margin_right = 972.0
margin_bottom = 427.0
rect_pivot_offset = Vector2( -1182, -138 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 685.0
margin_top = 452.0
margin_right = 840.0
margin_bottom = 517.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect4"]
modulate = Color( 0.00784314, 0, 0, 1 )
self_modulate = Color( 0.00784314, 0, 0, 1 )
margin_left = 21.0
margin_top = 9.0
margin_right = 134.0
margin_bottom = 57.0

[node name="Label4" type="Label" parent="."]
margin_left = 685.0
margin_top = 348.0
margin_right = 921.0
margin_bottom = 365.0
rect_scale = Vector2( 1.24378, 1.97993 )
text = "Digite um valor abaixo:"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
